5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4149/executions/1585_1017.log
== TEST (2019-03-25 22:29:25) 
-- CODE:
from math import *
p1_la= radians(float(input("Latitude de P1: ")))
p1a_lo= radians(float(input("Longitude de p1: ")))
p2_la= radians(float(input("Latitude de P2: ")))
p2_lo= radians(float(input("Longitude de P2: ")))

d= 6371.01*(acos(sin(p1_la)*sin(p2_la)))+cos(p1_la)*cos(p2_la)*cos(p1_lo-p2_lo)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    d= 6371.01*(acos(sin(p1_la)*sin(p2_la)))+cos(p1_la)*cos(p2_la)*cos(p1_lo-p2_lo)
NameError: name 'p1_lo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 22:31:11) 
-- CODE:
from math import *
p1_la= radians(float(input("Latitude de P1: ")))
p1a_lo= radians(float(input("Longitude de p1: ")))
p2_la= radians(float(input("Latitude de P2: ")))
p2_lo= radians(float(input("Longitude de P2: ")))

d= 6371.01*(acos(sin(p1_la)*sin(p2_la)))+cos(p1_la)*cos(p2_la)*cos(p1_lo-p2_lo)

print(round(d,2))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    d= 6371.01*(acos(sin(p1_la)*sin(p2_la)))+cos(p1_la)*cos(p2_la)*cos(p1_lo-p2_lo)
NameError: name 'p1_lo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 22:32:07) 
-- CODE:
from math import *
p1_la= radians(float(input("Latitude de P1: ")))
p1a_lo= radians(float(input("Longitude de p1: ")))
p2_la= radians(float(input("Latitude de P2: ")))
p2_lo= radians(float(input("Longitude de P2: ")))

d= 6371.01*(acos(sin(p1_la)*sin(p2_la)))+cos(p1_la)*cos(p2_la)*cos(p1_lo-p2_lo)

print(round(d,2))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    d= 6371.01*(acos(sin(p1_la)*sin(p2_la)))+cos(p1_la)*cos(p2_la)*cos(p1_lo-p2_lo)
NameError: name 'p1_lo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 22:32:11) 
-- CODE:
from math import *
p1_la= radians(float(input("Latitude de P1: ")))
p1a_lo= radians(float(input("Longitude de p1: ")))
p2_la= radians(float(input("Latitude de P2: ")))
p2_lo= radians(float(input("Longitude de P2: ")))

d= 6371.01*(acos(sin(p1_la)*sin(p2_la)))+cos(p1_la)*cos(p2_la)*cos(p1_lo-p2_lo)

print(round(d,2))


-- EXECUTION TIME:
0.128473
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1585/1017/main.py", line 7, in <module>
    d= 6371.01*(acos(sin(p1_la)*sin(p2_la)))+cos(p1_la)*cos(p2_la)*cos(p1_lo-p2_lo)
NameError: name 'p1_lo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 22:32:14) 
-- CODE:
from math import *
p1_la= radians(float(input("Latitude de P1: ")))
p1a_lo= radians(float(input("Longitude de p1: ")))
p2_la= radians(float(input("Latitude de P2: ")))
p2_lo= radians(float(input("Longitude de P2: ")))

d= 6371.01*(acos(sin(p1_la)*sin(p2_la)))+cos(p1_la)*cos(p2_la)*cos(p1_lo-p2_lo)

print(round(d,2))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    d= 6371.01*(acos(sin(p1_la)*sin(p2_la)))+cos(p1_la)*cos(p2_la)*cos(p1_lo-p2_lo)
NameError: name 'p1_lo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 22:33:46) 
-- CODE:
from math import *
p1_la= radians(float(input("Latitude de P1: ")))
p1_lo= radians(float(input("Longitude de p1: ")))
p2_la= radians(float(input("Latitude de P2: ")))
p2_lo= radians(float(input("Longitude de P2: ")))

d= 6371.01*(acos(sin(p1_la)*sin(p2_la)))+cos(p1_la)*cos(p2_la)*cos(p1_lo-p2_lo)

print(round(d,2))


-- EXECUTION TIME:
0.21951
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
9990.38
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 22:34:53) 
-- CODE:
from math import *
p1_la= radians(float(input("Latitude de P1: ")))
p1_lo= radians(float(input("Longitude de p1: ")))
p2_la= radians(float(input("Latitude de P2: ")))
p2_lo= radians(float(input("Longitude de P2: ")))

d= 6371.01*(acos(sin(p1_la)*sin(p2_la)))+cos(p1_la)*cos(p2_la)*cos(p1_lo-p2_lo))

print(round(d,2))


-- ERROR:
File "XXXX", line 7
    d= 6371.01*(acos(sin(p1_la)*sin(p2_la)))+cos(p1_la)*cos(p2_la)*cos(p1_lo-p2_lo))
                                                                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 22:35:03) 
-- CODE:
from math import *
p1_la= radians(float(input("Latitude de P1: ")))
p1_lo= radians(float(input("Longitude de p1: ")))
p2_la= radians(float(input("Latitude de P2: ")))
p2_lo= radians(float(input("Longitude de P2: ")))

d= 6371.01*(acos(sin(p1_la)*sin(p2_la)))+cos(p1_la)*cos(p2_la)*cos(p1_lo-p2_lo)

print(round(d,2))


-- OUTPUT:
9990.38
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 22:35:55) 
-- CODE:
from math import *
p1_la= radians(float(input("Latitude de P1: ")))
p1_lo= radians(float(input("Longitude de p1: ")))
p2_la= radians(float(input("Latitude de P2: ")))
p2_lo= radians(float(input("Longitude de P2: ")))

d= 6371.01*(acos(sin(p1_la)*sin(p2_la)))+cos(p1_la)*cos(p2_la)*cos(p1_lo-p2_lo)

print(round(d,2))


-- EXECUTION TIME:
0.223865
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
9990.38
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 22:37:34) 
-- CODE:
from math import *
p1_la= radians(float(input("Latitude de P1: ")))
p1_lo= radians(float(input("Longitude de p1: ")))
p2_la= radians(float(input("Latitude de P2: ")))
p2_lo= radians(float(input("Longitude de P2: ")))

d= (6371.01)*(acos(sin(p1_la)*sin(p2_la)))+cos(p1_la)*cos(p2_la)*cos(p1_lo-p2_lo)

print(round(d,2))


-- EXECUTION TIME:
0.164919
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
9990.38
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 22:38:46) 
-- CODE:
from math import *
p1_la= radians(float(input("Latitude de P1: ")))
p1_lo= radians(float(input("Longitude de p1: ")))
p2_la= radians(float(input("Latitude de P2: ")))
p2_lo= radians(float(input("Longitude de P2: ")))

d=6371.01*(acos(sin(p1_la)*sin(p2_la)))+cos(p1_la)*cos(p2_la)*cos(p1_lo-p2_lo)

print(round(d,2))


-- EXECUTION TIME:
0.230919
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
9990.38
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 22:41:00) 
-- CODE:
from math import *
p1_la= radians(float(input("Latitude de P1: ")))
p1_lo= radians(float(input("Longitude de p1: ")))
p2_la= radians(float(input("Latitude de P2: ")))
p2_lo= radians(float(input("Longitude de P2: ")))

d=6371.01*(acos(sin(p1_la)*sin(p2_la)))+(cos(p1_la))*(cos(p2_la))*(cos(p1_lo-p2_lo))

print(round(d,2))


-- EXECUTION TIME:
0.124115
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
9990.38
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 22:41:12) 
-- CODE:
from math import *
p1_la= radians(float(input("Latitude de P1: ")))
p1_lo= radians(float(input("Longitude de p1: ")))
p2_la= radians(float(input("Latitude de P2: ")))
p2_lo= radians(float(input("Longitude de P2: ")))

d=6371.01*(acos(sin(p1_la)*sin(p2_la)))+(cos(p1_la))*(cos(p2_la))*(cos(p1_lo-p2_lo))

print(round(d,2))


-- OUTPUT:
9990.38
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 22:44:59) 
-- CODE:
from math import *
p1_la= radians(float(input("Latitude de P1: ")))
p1_lo= radians(float(input("Longitude de p1: ")))
p2_la= radians(float(input("Latitude de P2: ")))
p2_lo= radians(float(input("Longitude de P2: ")))

d=6371.01*(acos((sin(p1_la)*(sin(p2_la)))+(cos(p1_la))*(cos(p2_la))*(cos(p1_lo-p2_lo))

print(round(d,2))


-- EXECUTION TIME:
0.195212
-- ERROR:
  File "/home/codebench/codes/1585/1017/main.py", line 9
    print(round(d,2))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 22:46:32) 
-- CODE:
from math import *
p1_la= radians(float(input("Latitude de P1: ")))
p1_lo= radians(float(input("Longitude de p1: ")))
p2_la= radians(float(input("Latitude de P2: ")))
p2_lo= radians(float(input("Longitude de P2: ")))

d=6371.01*(acos((sin(p1_la))*(sin(p2_la)))+(cos(p1_la))*(cos(p2_la))*(cos(p1_lo-p2_lo))

print(round(d,2))


-- EXECUTION TIME:
0.156517
-- ERROR:
  File "/home/codebench/codes/1585/1017/main.py", line 9
    print(round(d,2))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 22:55:25) 
-- CODE:
from math import *
p1_la= radians(float(input("Latitude de P1: ")))
p1_lo= radians(float(input("Longitude de p1: ")))
p2_la= radians(float(input("Latitude de P2: ")))
p2_lo= radians(float(input("Longitude de P2: ")))

d=6371.01*(acos(sin(p1_la)*(sin(p2_la))+(cos(p1_la)*cos(p2_la)*cos(p1_lo-p2_lo))))

print(round(d,2))


-- EXECUTION TIME:
0.142657
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
50.44
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
